refactor app archi

--- a/src/main/resources/default_fr.properties
+++ b/src/main/resources/default_fr.properties
@@ -33,6 +33,7 @@ description = Description
 
 email = Email
 
+error.email_in_use           = Cette adresse email est d\u00E9j\u00E0 utilis\u00E9e. Choisissez en une autre.
 error.email_invalid          = L'adresse email est invalide.
 error.password_confirm_empty = Le mot de passe de confirmation ne peut \u00EAtre vide.
 error.password_mismatch      = Les mots de passe sont diff\u00E9rents.
