confirm mail sending

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,6 +40,7 @@ email.footer          = Best regards,\r\nSharings Team.
 
 error.email_in_use           = This email is already in use. Choose another one. 
 error.email_invalid          = Email is not valid.
+error.name_too_big=Name is too long.
 error.password_confirm_empty = Confirmation password can not be empty.
 error.password_mismatch      = Passwords do not match.
 error.password_size          = Password must have between 8 and 20 characters.
@@ -62,6 +63,7 @@ msg.board_deleted_success        = Board has been deleted.
 msg.board_name_required          = Board name is required.
 msg.board_saved_success          = Board is successfully saved.
 msg.confirm_delete_board         = Board will permanently removed. Do you want to continue?
+msg.confirm_email=Great! Finalize your subscription by clicking on the link sent to you by email.
 msg.confirm_form_exit            = All unsaved changes will be lost. Do you want to continue ?
 msg.generic_error                = The application has encountered an unexpected error.
 msg.item_saved_success           = Item is successfully saved.
@@ -105,7 +107,7 @@ settings = Settings
 start = Let's start
 
 test = This is a test message
-
+title.confirm_email=Confirm your email
 updated_on = Updated on 
 
 window.title = Share
