--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -40,6 +40,7 @@ email.footer          = Bien cordialement,\r\nApplication de partage.
 
 error.email_in_use           = Cette adresse email est d\u00E9j\u00E0 utilis\u00E9e. Choisissez en une autre.
 error.email_invalid          = L'adresse email est invalide.
+error.name_too_big           = Le nom est trop grand.
 error.password_confirm_empty = Le mot de passe de confirmation ne peut \u00EAtre vide.
 error.password_mismatch      = Les mots de passe sont diff\u00E9rents.
 error.password_size          = Le mot de passe doit contenir entre 8 et 20 caract\u00E8res.
@@ -62,6 +63,7 @@ msg.board_deleted_success        = Le tablea a \u00E9t\u00E9 supprim\u00E9.
 msg.board_name_required          = Le nom du board est obligatoire.
 msg.board_saved_success          = Le tableau est enregistr\u00E9 avec succ\u00E8s.
 msg.confirm_delete_board         = Le tableau sera d\u00E9finitivement supprim\u00E9. Voulez-vous continuer ?
+msg.confirm_email                = Excelent! Il ne vous reste qu'\u00E0 confirmer la souscription en cliquant sur le lien qui vous a \u00E9t\u00E9 envoy\u00E9 par mail. 
 msg.confirm_form_exit            = Toutes les modifications non enregistr\u00E9es seront perdues. Voulez-vous continuer ?
 msg.generic_error                = L'application a rencontr\u00E9 une erreur inattendue.
 msg.item_saved_success           = Ligne est ajout\u00E9e au tableau.
@@ -105,6 +107,8 @@ settings = Pr\u00E9f\u00E9rences
 start = C'est parti
 
 test = Ceci est un test
+
+title.confirm_email = Confirmez l'adresse mail
 
 updated_on = Mis \u00E0 jour le 
 
