--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -35,7 +35,7 @@ email = Email
 
 email.confirm.message = Cliquez sur le lien ci-dessous pour confirmer votre adresse email.
 email.confirm.subject = Confirmez votre adresse email
-email.confirm.url     = {0}/{1}/confirm-email/{2}
+email.confirm.url={0}/{1}/confirm-email/{2}/
 email.footer          = Bien cordialement,\r\nApplication de partage.
 
 error.email_in_use           = Cette adresse email est d\u00E9j\u00E0 utilis\u00E9e. Choisissez en une autre.
@@ -44,7 +44,7 @@ error.name_too_big           = Le nom est trop grand.
 error.password_confirm_empty = Le mot de passe de confirmation ne peut \u00EAtre vide.
 error.password_mismatch      = Les mots de passe sont diff\u00E9rents.
 error.password_size          = Le mot de passe doit contenir entre 8 et 20 caract\u00E8res.
-
+error.token_validation_not_found=Désolé! Ce lien de validation n'est plus valid. Si vous l'avez déjà utilisé identifiez-vous sur la page de connexion. 
 exit = Quitter
 
 file = Fichier
