--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -35,7 +35,7 @@ email = Email
 
 email.confirm.message = Click on the link below to confirm your email address.
 email.confirm.subject = Confirm your email address
-email.confirm.url     = {0}/{1}/confirm-email/{2}
+email.confirm.url={0}/{1}/confirm-email/{2}/
 email.footer          = Best regards,\r\nSharings Team.
 
 error.email_in_use           = This email is already in use. Choose another one. 
@@ -44,7 +44,7 @@ error.name_too_big=Name is too long.
 error.password_confirm_empty = Confirmation password can not be empty.
 error.password_mismatch      = Passwords do not match.
 error.password_size          = Password must have between 8 and 20 characters.
-
+error.token_validation_not_found=Sorry! Provided link is not valid anymore. If you have used it already use the sign in page to log in.
 exit = Exit
 
 file = File
