confirm and password reset

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,13 +16,15 @@ board_has_no_items = This board has no items yes.
 board_has_no_participants = Board has no participants yet.
 
 button.add_participant = Add participant
-
+button.save=Save
+button.send_email=Send email
+button.sign_in=Sign in
 chartData = Expenses
 
 choose_from_the_list = Select from the list
 
 create_account = Create account
-
+create_an_account=Create an account.
 currency = Currency
 
 debt = Debt
@@ -35,9 +37,16 @@ email = Email
 
 email.confirm.message = Click on the link below to confirm your email address.
 email.confirm.subject = Confirm your email address
-email.confirm.url={0}/{1}/confirm-email/{2}/
+email.confirm.url={0}/{1}/confirm-email/{2}
 email.footer          = Best regards,\r\nSharings Team.
-
+email.footer.bye=Best regards
+email.footer.team=The Team
+email.reset.footer=If you did not initiate this request, please contact us immediately at support@partage.com .
+email.reset.message=A request has been recieved to change the password for your account. Click on the link below to reset the password.
+email.reset.subject=Password reset
+error.account_confirm_email=You must confirm your email address to continue.
+error.account_invalid_credentials=Incorrect email or password.
+error.account_not_found=This email is not registered.  
 error.email_in_use           = This email is already in use. Choose another one. 
 error.email_invalid          = Email is not valid.
 error.name_too_big=Name is too long.
@@ -48,8 +57,8 @@ error.token_validation_not_found=Sorry! Provided link is not valid anymore. If y
 exit = Exit
 
 file = File
-
-greetings = Hello, {0}.
+forgot_password=Forgot password ?
+greetings=Hello {0}
 
 help = Help
 
@@ -69,6 +78,7 @@ msg.generic_error                = The application has encountered an unexpected
 msg.item_saved_success           = Item is successfully saved.
 msg.participant_already_on_board = This participant is already registered for this board.
 msg.partipant_name_required      = Participant's name is required.
+msg.password_update_success=Your password has been updated.
 msg.person_is_required           = Select a person.
 msg.provide_participants         = Add at least one participant.
 msg.settings_saved_success       = Settings has been updated.
@@ -81,7 +91,7 @@ new_board = New board
 new_entry = New entry
 
 no_data_to_display = There is no data to display yet.
-
+not_registered=New ?
 or = OR
 
 overpaid = Overpaid
@@ -99,11 +109,13 @@ quit = Quit
 refundment = Refund
 
 repeat_password = Repeat password
-
+reset_pass.confirmation=A password reset link has been sent to your email address.
+reset_pass.description=Enter your user account's verified email address and we will send you a password reset link.
+reset_password=Reset your password
 save = Save
 
 settings = Settings
-
+sign_in=Sign in
 start = Let's start
 
 test = This is a test message
