--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -16,13 +16,15 @@ board_has_no_items = Ce tableau n'as pas de lignes.
 board_has_no_participants = Le tableau n'as pas de participants encore.
 
 button.add_participant = Ajouter participant
-
+button.save=Enregistrer
+button.send_email=Envoyer un email
+button.sign_in=Se connecter
 chartData = D\u00E9penses
 
 choose_from_the_list = Choisissez dans la liste
 
 create_account = Cr\u00E9er un compte
-
+create_an_account=Créez un compte.
 currency = Devise
 
 debt = Debt
@@ -35,9 +37,16 @@ email = Email
 
 email.confirm.message = Cliquez sur le lien ci-dessous pour confirmer votre adresse email.
 email.confirm.subject = Confirmez votre adresse email
-email.confirm.url={0}/{1}/confirm-email/{2}/
+email.confirm.url={0}/{1}/confirm-email/{2}
 email.footer          = Bien cordialement,\r\nApplication de partage.
-
+email.footer.bye=Bien à vous
+email.footer.team=L'équipe
+email.reset.footer=Si vous n'avez pas initié cette demande, veuillez nous contacter immédiatement à support@partage.com.
+email.reset.message=Une demande a été reçue pour le changement du mot de passe de votre compte. Cliquez sur le lien ci-dessous pour réinitialiser le mot de passe.
+email.reset.subject=Réinitialisation du mot de passe
+error.account_confirm_email=Vous devez confirmer votre adresse email pour continuer.
+error.account_invalid_credentials=Le couple email/mot de passe est erroné.
+error.account_not_found=Cet email n'est enregistré.  
 error.email_in_use           = Cette adresse email est d\u00E9j\u00E0 utilis\u00E9e. Choisissez en une autre.
 error.email_invalid          = L'adresse email est invalide.
 error.name_too_big           = Le nom est trop grand.
@@ -48,8 +57,8 @@ error.token_validation_not_found=Désolé! Ce lien de validation n'est plus valid.
 exit = Quitter
 
 file = Fichier
-
-greetings = Bonjour, {0}
+forgot_password=Mot de passe oublié ?
+greetings=Bonjour {0}
 
 help = Aide
 
@@ -69,6 +78,7 @@ msg.generic_error                = L'application a rencontr\u00E9 une erreur ina
 msg.item_saved_success           = Ligne est ajout\u00E9e au tableau.
 msg.participant_already_on_board = Ce participant est d\u00E9j\u00E0 enregistr\u00E9 sur ce tableau.
 msg.partipant_name_required      = Le nom du participant est obligatoire.
+msg.password_update_success=Votre mot de passe a été mis à jour.
 msg.person_is_required           = S\u00E9lectionnez un participant.
 msg.provide_participants         = Ajoutez au moins un participant.
 msg.settings_saved_success       = Vos pr\u00E9f\u00E9rences ont \u00E9t\u00E9 mis \u00E0 jour. 
@@ -81,7 +91,7 @@ new_board = Nouveau partage
 new_entry = Nouvelle entr\u00E9e
 
 no_data_to_display = Pour l'instant il n'y a pas de donn\u00E9es \u00E0 afficher.
-
+not_registered=Pas de compte ?
 or = OU
 
 overpaid = Pay\u00E9 en trop
@@ -99,11 +109,13 @@ quit = Quitter
 refundment = Remboursement
 
 repeat_password = Confirmez le mot de passe
-
+reset_pass.confirmation=Un lien de réinitialisation du mot de passe a été envoyé sur votre adresse e-mail.
+reset_pass.description=Saisissez l'adresse e-mail vérifiée de votre compte utilisateur et nous vous enverrons un lien de réinitialisation de mot de passe.
+reset_password=Réinitialisez votre mot de passe
 save = Enregistrer
 
 settings = Pr\u00E9f\u00E9rences
-
+sign_in=Connexion
 start = C'est parti
 
 test = Ceci est un test
