added token validation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -53,6 +53,7 @@ error.name_too_big=Name is too long.
 error.password_confirm_empty = Confirmation password can not be empty.
 error.password_mismatch      = Passwords do not match.
 error.password_size          = Password must have between 8 and 20 characters.
+error.token_not_found=Sorry! Provided link is not valid anymore.
 error.token_validation_not_found=Sorry! Provided link is not valid anymore. If you have used it already use the sign in page to log in.
 exit = Exit
 
