--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -53,7 +53,8 @@ error.name_too_big           = Le nom est trop grand.
 error.password_confirm_empty = Le mot de passe de confirmation ne peut \u00EAtre vide.
 error.password_mismatch      = Les mots de passe sont diff\u00E9rents.
 error.password_size          = Le mot de passe doit contenir entre 8 et 20 caract\u00E8res.
-error.token_validation_not_found=Désolé! Ce lien de validation n'est plus valid. Si vous l'avez déjà utilisé identifiez-vous sur la page de connexion. 
+error.token_not_found=Désolé! Ce lien n'est plus valid.
+error.token_validation_not_found=Désolé! Ce lien n'est plus valid. Si vous l'avez déjà utilisé identifiez-vous sur la page de connexion. 
 exit = Quitter
 
 file = Fichier
