--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -67,7 +67,7 @@ info.password_min_length  = Enter at least 8 characters.
 info.password_requirement = Enter between 8 and 20 characters.
 
 language = Language
-
+sign_out=Sign out
 msg.amount_is_required           = The amount is required.
 msg.board_deleted_success        = Board has been deleted.
 msg.board_name_required          = Board name is required.
@@ -117,7 +117,7 @@ save = Save
 
 settings = Settings
 sign_in=Sign in
-start = Let's start
+start=Let's go !
 
 test = This is a test message
 title.confirm_email=Confirm your email
