--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -67,7 +67,7 @@ info.password_min_length  = Saisissez au moins 8 caract\u00E8res.
 info.password_requirement = Entrez entre 8 et 20 caract\u00E8res.
 
 language = Langue
-
+sign_out=Deconnexion
 msg.amount_is_required           = Le montant est obligatoire.
 msg.board_deleted_success        = Le tablea a \u00E9t\u00E9 supprim\u00E9.
 msg.board_name_required          = Le nom du board est obligatoire.
@@ -117,7 +117,7 @@ save = Enregistrer
 
 settings = Pr\u00E9f\u00E9rences
 sign_in=Connexion
-start = C'est parti
+start=C'est parti !
 
 test = Ceci est un test
 
