add participants ok

--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -126,3 +126,6 @@ title.confirm_email = Confirmez l'adresse mail
 updated_on = Mis \u00E0 jour le 
 
 window.title = Partager
+error.currency_is_required=La monnaie est obligatoire.
+msg.person_already_registered=Cette personne est déjà enregistrée. Choisissez un autre nom pour cette personne ou choisissez la dans la liste.
+remove=Supprimer
