--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -124,3 +124,6 @@ title.confirm_email=Confirm your email
 updated_on = Updated on 
 
 window.title = Share
+error.currency_is_required=Currency is required.
+msg.person_already_registered=This person is already registered. Choose another name for this person or choose this person from the list. 
+remove=Remove
