--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -129,3 +129,9 @@ window.title = Partager
 error.currency_is_required=La monnaie est obligatoire.
 msg.person_already_registered=Cette personne est déjà enregistrée. Choisissez un autre nom pour cette personne ou choisissez la dans la liste.
 remove=Supprimer
+confirm_to_continue=Confirmez pour continuer .
+Cancel=Annuler
+OK=OK
+edit_board=Editer partage 
+title.your_boards=Vos partages
+remove_board=Supprimer le partage  
