--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -127,3 +127,9 @@ window.title = Share
 error.currency_is_required=Currency is required.
 msg.person_already_registered=This person is already registered. Choose another name for this person or choose this person from the list. 
 remove=Remove
+confirm_to_continue=Confirm to continue .
+Cancel=Cancel
+OK=OK
+edit_board=Edit board 
+title.your_boards=Your boards
+remove_board=Remove board 
