--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -133,3 +133,8 @@ OK=OK
 edit_board=Edit board 
 title.your_boards=Your boards
 remove_board=Remove board 
+Title=Title
+Date=Date
+date_help=Put date in a format day/month/year, ex. 31/12/2020.
+paid_by=Paid by
+error.value_too_big=Provided value is too long.
