--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -135,3 +135,8 @@ OK=OK
 edit_board=Editer partage 
 title.your_boards=Vos partages
 remove_board=Supprimer le partage  
+Title=Titre
+Date=Date
+date_help=Mettez la date dans un format jour/mois/année, ex. 31/12/2020.
+paid_by=Payé par
+error.value_too_big=La valeur saisie est trop longue.
