--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -138,3 +138,5 @@ Date=Date
 date_help=Put date in a format day/month/year, ex. 31/12/2020.
 paid_by=Paid by
 error.value_too_big=Provided value is too long.
+add_expense=Add expense
+expenses=Expenses
