--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -140,3 +140,5 @@ Date=Date
 date_help=Mettez la date dans un format jour/mois/année, ex. 31/12/2020.
 paid_by=Payé par
 error.value_too_big=La valeur saisie est trop longue.
+add_expense=Ajouter une dépense
+expenses=Dépenses
