--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -140,3 +140,5 @@ payed_by=
 paied_by=
 paid_by=Paid by
 error.value_too_big=Provided value is too long.
+add_expense=Add expense
+expenses=Expenses
