fix 404 on edit board

--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -142,3 +142,4 @@ paid_by=Payé par
 error.value_too_big=La valeur saisie est trop longue.
 add_expense=Ajouter une dépense
 expenses=Dépenses
+msg.date_is_required=La date est obligatoire.
