--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -142,3 +142,4 @@ paid_by=Paid by
 error.value_too_big=Provided value is too long.
 add_expense=Add expense
 expenses=Expenses
+msg.date_is_required=Date is required.
