balance page ok

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -143,3 +143,8 @@ error.value_too_big=Provided value is too long.
 add_expense=Add expense
 expenses=Expenses
 msg.date_is_required=Date is required.
+participant=Participant
+spent=Spent
+average=Average
+debtor=Debtor
+creditor=Creditor
