--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -143,3 +143,8 @@ error.value_too_big=La valeur saisie est trop longue.
 add_expense=Ajouter une dépense
 expenses=Dépenses
 msg.date_is_required=La date est obligatoire.
+participant=Participant
+spent=Dépensé
+average=La moyenne
+debtor=Débiteur
+creditor=Créditeur
