participants list ok

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -72,7 +72,7 @@ msg.amount_is_required           = The amount is required.
 msg.board_deleted_success        = Board has been deleted.
 msg.board_name_required          = Board name is required.
 msg.board_saved_success          = Board is successfully saved.
-msg.confirm_delete_board         = Board will permanently removed. Do you want to continue?
+msg.confirm_delete_board=Board will be permanently removed. Do you want to continue?
 msg.confirm_email=Great! Finalize your subscription by clicking on the link sent to you by email.
 msg.confirm_form_exit            = All unsaved changes will be lost. Do you want to continue ?
 msg.generic_error                = The application has encountered an unexpected error.
@@ -148,3 +148,5 @@ spent=Spent
 average=Average
 debtor=Debtor
 creditor=Creditor
+msg.confirm_delete_participant=Participant and all related expenses will be permanently removed. Do you want to continue?
+msg.participant_deleted_success=Participant has been deleted.
