--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -148,3 +148,5 @@ spent=Dépensé
 average=La moyenne
 debtor=Débiteur
 creditor=Créditeur
+msg.confirm_delete_participant=Le participant et toutes ces dépenses seront supprimés définitivement. Voulez-vous continuer?
+msg.participant_deleted_success=Le participant a été supprimé.
