participant edit ok

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -148,3 +148,6 @@ debtor=Debtor
 creditor=Creditor
 msg.confirm_delete_participant=Participant and all related expenses will be permanently removed. Do you want to continue?
 msg.participant_deleted_success=Participant has been deleted.
+msg.participant_name_min_max=Participant name must have between 1 and 50 characters.
+msg.person_exists=This person is already registered. Choose another name for this person. 
+msg.person_saved_success=Participant is successfully saved.
