--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -150,3 +150,6 @@ debtor=Débiteur
 creditor=Créditeur
 msg.confirm_delete_participant=Le participant et toutes ces dépenses seront supprimés définitivement. Voulez-vous continuer?
 msg.participant_deleted_success=Le participant a été supprimé.
+msg.participant_name_min_max=Le nom du participant doit avoir entre 1 et 50 caractères.
+msg.person_exists=Cette personne est déjà enregistrée. Choisissez un autre nom.
+msg.person_saved_success=Le participant est enregistré avec succès.
