--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -153,3 +153,5 @@ msg.participant_deleted_success=Participant has been deleted.
 msg.participant_name_min_max=Participant name must have between 1 and 50 characters.
 msg.person_exists=This person is already registered. Choose another name for this person. 
 msg.person_saved_success=Participant is successfully saved.
+account=Account
+error.language_is_required=Language is required.
