--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -153,3 +153,5 @@ msg.participant_deleted_success=Le participant a été supprimé.
 msg.participant_name_min_max=Le nom du participant doit avoir entre 1 et 50 caractères.
 msg.person_exists=Cette personne est déjà enregistrée. Choisissez un autre nom.
 msg.person_saved_success=Le participant est enregistré avec succès.
+account=Compte
+error.language_is_required=La langue est obligatoire.
