added delete action to item

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -70,13 +70,15 @@ language = Language
 sign_out=Sign out
 msg.amount_is_required           = The amount is required.
 msg.board_deleted_success        = Board has been deleted.
+msg.item_delete_success=The expense has been deleted.
 msg.board_name_required          = Board name is required.
 msg.board_saved_success          = Board is successfully saved.
-msg.confirm_delete_board=Board will be permanently removed. Do you want to continue?
+msg.confirm_delete_board=The board will be permanently removed. Do you want to continue?
+msg.confirm_delete_item=The expense will be permanently removed. Do you want to continue?
 msg.confirm_email=Great! Finalize your subscription by clicking on the link sent to you by email.
 msg.confirm_form_exit            = All unsaved changes will be lost. Do you want to continue ?
 msg.generic_error                = The application has encountered an unexpected error.
-msg.item_saved_success           = Item is successfully saved.
+msg.item_saved_success=The expense successfully saved.
 msg.participant_already_on_board = This participant is already registered for this board.
 msg.partipant_name_required      = Participant's name is required.
 msg.password_update_success=Your password has been updated.
@@ -153,3 +155,4 @@ msg.person_exists=This person is already registered. Choose another name for thi
 msg.person_saved_success=Participant is successfully saved.
 account=Account
 error.language_is_required=Language is required.
+delete=Delete
