--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -70,13 +70,15 @@ language = Langue
 sign_out=Deconnexion
 msg.amount_is_required           = Le montant est obligatoire.
 msg.board_deleted_success        = Le tablea a \u00E9t\u00E9 supprim\u00E9.
+msg.item_delete_success=La dépense a été supprimée.
 msg.board_name_required          = Le nom du board est obligatoire.
 msg.board_saved_success          = Le tableau est enregistr\u00E9 avec succ\u00E8s.
 msg.confirm_delete_board         = Le tableau sera d\u00E9finitivement supprim\u00E9. Voulez-vous continuer ?
+msg.confirm_delete_item=La dépense sera définitivement supprimée. Voulez-vous continuer?
 msg.confirm_email                = Excelent! Il ne vous reste qu'\u00E0 confirmer la souscription en cliquant sur le lien qui vous a \u00E9t\u00E9 envoy\u00E9 par mail. 
 msg.confirm_form_exit            = Toutes les modifications non enregistr\u00E9es seront perdues. Voulez-vous continuer ?
 msg.generic_error                = L'application a rencontr\u00E9 une erreur inattendue.
-msg.item_saved_success           = Ligne est ajout\u00E9e au tableau.
+msg.item_saved_success=La dépense est enregistrée avec succès.
 msg.participant_already_on_board = Ce participant est d\u00E9j\u00E0 enregistr\u00E9 sur ce tableau.
 msg.partipant_name_required      = Le nom du participant est obligatoire.
 msg.password_update_success=Votre mot de passe a été mis à jour.
@@ -155,3 +157,4 @@ msg.person_exists=Cette personne est déjà enregistrée. Choisissez un autre nom.
 msg.person_saved_success=Le participant est enregistré avec succès.
 account=Compte
 error.language_is_required=La langue est obligatoire.
+delete=Supprimer
