--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -53,6 +53,9 @@ error.name_too_big=Name is too long.
 error.password_confirm_empty = Confirmation password can not be empty.
 error.password_mismatch      = Passwords do not match.
 error.password_size          = Password must have between 8 and 20 characters.
+error.password_invalid=The password is invalid.
+error.name_invalid=The name is invalid.
+error.name_in_use=This name is already in use. Please choose another one.
 error.token_not_found=Sorry! Provided link is not valid anymore.
 error.token_validation_not_found=Sorry! Provided link is not valid anymore. If you have used it already use the sign in page to log in.
 exit = Exit
@@ -64,7 +67,7 @@ greetings=Hello {0}
 help = Help
 
 info.password_min_length  = Enter at least 8 characters.
-info.password_requirement = Enter between 8 and 20 characters.
+info.password_requirement=Password must contain at least 1 number, 1 upper case letter, 1 lower case letter, 1 special character !@#$%^&*, must not contain any spaces and have between 8 and 20 characters.
 
 language = Language
 sign_out=Sign out
