--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -53,6 +53,9 @@ error.name_too_big           = Le nom est trop grand.
 error.password_confirm_empty = Le mot de passe de confirmation ne peut \u00EAtre vide.
 error.password_mismatch      = Les mots de passe sont diff\u00E9rents.
 error.password_size          = Le mot de passe doit contenir entre 8 et 20 caract\u00E8res.
+error.password_invalid=Le mot de passe est non valide.
+error.name_invalid=Le nom est non valide.
+error.name_in_use=Ce nom est déjà utilisé. Merci de choisir un autre.
 error.token_not_found=Désolé! Ce lien n'est plus valid.
 error.token_validation_not_found=Désolé! Ce lien n'est plus valid. Si vous l'avez déjà utilisé identifiez-vous sur la page de connexion. 
 exit = Quitter
@@ -64,7 +67,7 @@ greetings=Bonjour {0}
 help = Aide
 
 info.password_min_length  = Saisissez au moins 8 caract\u00E8res.
-info.password_requirement = Entrez entre 8 et 20 caract\u00E8res.
+info.password_requirement=Le mot de passe doit contenir au moins 1 chiffre, 1 lettre majuscule, 1 lettre minuscule, 1 caractère spécial !@#$%^&*, ne doit pas contenir d’espaces et avoir entre 8 et 20 caractères.
 
 language = Langue
 sign_out=Deconnexion
