--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -161,3 +161,5 @@ msg.person_saved_success=Participant is successfully saved.
 account=Account
 error.language_is_required=Language is required.
 delete=Delete
+share_with_friends=Share with friends
+go_back=Go back
