--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -161,3 +161,5 @@ msg.person_saved_success=Le participant est enregistré avec succès.
 account=Compte
 error.language_is_required=La langue est obligatoire.
 delete=Supprimer
+share_with_friends=Pargager avec des amis
+go_back=Retour
